--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "copy-to-clipboard": "^3.3.1",
     "dates-generator": "^1.0.4",
     "html5-file-selector": "^2.1.0",
+    "rc-time-picker": "^3.7.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-calendar": "^3.4.0",
@@ -33,6 +34,7 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.2.7",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
@@ -43,6 +45,7 @@
     "react-slideshow-image": "^3.5.1",
     "react-time-picker": "^4.4.3",
     "react-timezone-select": "^1.1.11",
+    "react-weblineindia-time-picker": "^1.0.0",
     "redux-thunk": "^2.4.0",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
